syntax = "proto3";

option go_package = "./protocol";
package proto;

message Currency {
  string name  = 1;
  float price = 2;
  string time = 3;
}

message GetPriceRequest { string name = 1; }

message GetPriceResponse { Currency currency = 1; }

service CurrencyService {
  rpc GetPrice(stream GetPriceRequest) returns (stream GetPriceResponse) {
  };
}