syntax = "proto3";

option go_package = "./protocolBroker";
package protocolBroker;

message BuyRequest {
  string    currencyName = 1;
  int64     currencyAmount = 2;
  price
}

message BuyResponse {
  string transactionID = 1;
}

service TransactionService {
  rpc BuyCurrency(BuyRequest) returns (BuyResponse) {
  };
}